feat(add-on): 서비스 기능 추가
**
User : 연쇄 삭제
Channel : 이름, 조건 검색
Participation : 참여자 강퇴, 역할 변경
**